--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-asgiref==3.7.2
-Django==4.2.3
-django-extensions==3.2.3
-django-htmx==1.16.0
-sqlparse==0.4.4
-tzdata==2023.3
+asgiref
+Django
+django-extensions
+django-htmx
+Faker
+python-dateutil
+six
+sqlparse
+tzdata
